--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "daisyui": "^4.12.2",
     "drizzle-kit": "^0.22.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
