--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@vercel/postgres": "^0.8.0",
     "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.31.1",
